streak saver editing

--- a/index.html
+++ b/index.html
@@ -15,23 +15,33 @@
       </div>
       <div class="server-logo">
         <span class="message__count">8</span>
-        <img src="server1.jpg" alt="server" />
+        <a href="index.html">
+          <img src="server1.jpg" alt="server" />
+        </a>
       </div>
       <div class="server-logo">
         <span class="message__count">50</span>
-        <img src="server2.jpg" alt="server" />
+        <a href="index.html">
+          <img src="server2.jpg" alt="server" />
+        </a>
       </div>
       <div class="server-logo">
         <span class="message__count">120</span>
-        <img src="server3.jpg" alt="server" />
+        <a href="index.html">
+          <img src="server3.jpg" alt="server" />
+        </a>
       </div>
       <div class="server-logo">
         <span class="message__count">20</span>
-        <img src="server4.jpg" alt="server" />
+        <a href="index.html">
+          <img src="server4.jpg" alt="server" />
+        </a>
       </div>
       <div class="server-logo">
         <span class="message__count">25</span>
-        <img src="server5.jpg" alt="server" />
+        <a href="index.html">
+          <img src="server5.jpg" alt="server" />
+        </a>
       </div>
     </div>
 
@@ -58,21 +68,27 @@
           <div class="sidebar__user">
             <div>
               <span class="status"></span>
-              <img src="user1.jpg" alt="avatar" />
+              <a href="index.html">
+                <img src="user1.jpg" alt="avatar" />
+              </a>
             </div>
             <h4>Hacker</h4>
           </div>
           <div class="sidebar__user">
             <div>
               <span class="status"></span>
-              <img src="user2.jpg" alt="avatar" />
+              <a href="hacker.html">
+                <img src="user2.jpg" alt="avatar" />
+              </a>
             </div>
             <h4>E-Girl</h4>
           </div>
           <div class="sidebar__user">
             <div>
               <span class="status"></span>
-              <img src="user3.jpg" alt="avatar" />
+              <a href="index.html">
+                <img src="user3.jpg" alt="avatar" />
+              </a>
             </div>
             <h4>Hitman#124</h4>
           </div>
@@ -81,7 +97,9 @@
       <div class="sidebar__profile">
         <div>
           <span class="status"></span>
-          <img src="user4.jpg" alt="avatar" />
+          <a href="index.html">
+            <img src="user4.jpg" alt="avatar" />
+          </a>
         </div>
         <div class="sidebar__profileInfo">
           <h3>Gamer</h3>
